docs-archive/apache-airflow-providers-google/22.7.0/_sources/_api/airflow/providers/google/cloud/transfers/oracle_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.oracle_to_gcs
======================================================

.. py:module:: airflow.providers.google.cloud.transfers.oracle_to_gcs


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.oracle_to_gcs.OracleToGCSOperator


Module Contents
---------------

.. py:class:: OracleToGCSOperator(*, oracle_conn_id='oracle_default', ensure_utc=False, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`


   Copy data from Oracle to Google Cloud Storage in JSON, CSV or Parquet format.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OracleToGCSOperator`

   :param oracle_conn_id: Reference to a specific
       :ref:`Oracle hook <howto/connection:oracle>`.
   :param ensure_utc: Ensure TIMESTAMP columns exported as UTC. If set to
       `False`, TIMESTAMP columns will be exported using the Oracle server's
       default timezone.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql', 'bucket', 'filename', 'schema_filename', 'schema', 'parameters', 'impersonation_chain',...



   .. py:attribute:: ui_color
      :value: '#a0e08c'



   .. py:attribute:: type_map


   .. py:attribute:: ensure_utc
      :value: False



   .. py:attribute:: oracle_conn_id
      :value: 'oracle_default'



   .. py:property:: db_hook
      :type: airflow.providers.oracle.hooks.oracle.OracleHook



   .. py:method:: query()

      Query Oracle and returns a cursor to the results.



   .. py:method:: field_to_bigquery(field)

      Convert a DBAPI field to BigQuery schema format.



   .. py:method:: convert_type(value, schema_type, **kwargs)

      Take a value from Oracle db and convert it to a value safe for JSON/Google Cloud Storage/BigQuery.

      * Datetimes are converted to UTC seconds.
      * Decimals are converted to floats.
      * Dates are converted to ISO formatted string if given schema_type is
        DATE, or UTC seconds otherwise.
      * Binary type fields are converted to integer if given schema_type is
        INTEGER, or encoded with base64 otherwise. Imported BYTES data must
        be base64-encoded according to BigQuery documentation:
        https://cloud.google.com/bigquery/data-types

      :param value: Oracle db column value
      :param schema_type: BigQuery data type



   .. py:method:: get_openlineage_facets_on_start()


